--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 PORT=5173
 PG_URL=postgresql://trombi:trombi@localhost:5432/trombi
+SESSION_SECRET="Je suis content quand une carotte sort du terrier avec le lapin"
